<resources>
    <string name="app_name">Movie</string>
    <string name="endgame">Avengers: Endgame</string>
    <string name="released_text"><b>Released:</b> April 22, 2019</string>
    <string name="movie_trailer">MOVIE TRAILER</string>
    <string name="overview">Overview:</string>
    <string name="last_text">After, the devastating of Avengers: Infinity War, the universe is in ruins due to the
    efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order
    to undo Thanos actions and restore order to the universe once and for all, no matter what consequences may be in store.</string>
    <string name="infinity_war">Avengers: Infinity War</string>
    <string name="infinity_whole_text">Пока Мстители и их союзники продолжают защищать мир от различных опасностей, с которыми не смог бы справиться один супергерой, новая угроза возникает из космоса: Танос.</string>
    <string name="click">click</string>
    <string name="coroutines_activity">Open Coroutines_Activity</string>
    <string name="threads_activity">Open Thread Handler Activity</string>
    <string name="menu">menu</string>
    <string name="title_activity_coroutines">CoroutinesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">start</string>
    <string name="cancel">cancel</string>
    <string name="create">create</string>

</resources>
