<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/endgame_background"
        android:id="@+id/endgame_background"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/movie_trailer"/>

    <ImageView
        android:layout_width="130dp"
        android:layout_height="230dp"
        android:layout_below="@+id/endgame_background"
        android:scaleType="centerInside"
        android:src="@drawable/endgame_image"
        android:id="@+id/endgame_img"
        android:contentDescription="@string/endgame"
        />

    <TextView
        android:id="@+id/Main_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endgame_background"
        android:layout_toEndOf="@+id/endgame_img"
        android:text="@string/endgame"
        android:layout_marginStart="15dp"
        android:textColor="@color/purpleText"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/released_Text"
        android:layout_below="@+id/Main_Text"
        android:layout_toEndOf="@+id/endgame_img"
        android:layout_marginStart="15dp"
        android:text="@string/released_text"
        android:textSize="16sp"
        android:textColor="@color/blackText"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/click_to_trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_trailer"
        android:layout_below="@+id/released_Text"
        android:layout_toEndOf="@+id/endgame_img"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overview"
        android:text="@string/overview"
        android:textStyle="bold"
        android:layout_below="@id/endgame_img"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/blackText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/all_Text"
        android:layout_below="@+id/overview"
        android:textSize="16sp"
        android:text="@string/last_text"
        android:layout_marginTop="12dp"
        />

</RelativeLayout>