<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleText">

    <Button
        android:id="@+id/create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        android:text="@string/create"
         />

    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/create"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        android:text="@string/start"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        android:text="@string/cancel"/>


</androidx.constraintlayout.widget.ConstraintLayout>